k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example4
  labels:
    app: example4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example4
  template:
    metadata:
      labels:
        app: example4
    spec:
      containers:
        - name: example4-container
          image: almuko/example4:latest # 👈 заменишь на свой dockerhub
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
