k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example4
spec:
  type: ClusterIP
  selector:
    app: example4
  ports:
    - port: 80
      targetPort: 80
